--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,4 +21,4 @@ repos:
       - id: trailing-whitespace
       - id: mixed-line-ending
         args:
-          - --fix=crlf
+          - --fix=auto
