--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         id: checktag
         run: |
           cd ${{ github.workspace }}
-          If($Env:GITHUB_REF -match "v([0-9]*)\.([0-9]*)\.([0-9]*)") {
+          If($Env:GITHUB_REF -match "(?<=v)([0-9]*)\.([0-9]*)\.([0-9]*)") {
               $IsRelease = "yes";
               $Version = $Matches[0];
               $VersionMajor = $Matches[1];
@@ -31,8 +31,8 @@ jobs:
               $VersionPatch = $Matches[3];
           } Else {
               $IsRelease = "no";
-              $Version = (git describe --dirty --broken --always);
-              If($Version -match "v([0-9]*)\.([0-9]*)\.([0-9]*)-.*") {
+              $Version = (git describe --dirty --broken --always) -replace '^v', '';
+              If($Version -match "([0-9]*)\.([0-9]*)\.([0-9]*)-.*") {
                   $VersionMajor = $Matches[1];
                   $VersionMinor = $Matches[2];
                   $VersionPatch = $Matches[3];
