Build x86 algorithms, don't build AVX

--- a/Algorithms/BLAKE3/CMakeLists.txt
+++ b/Algorithms/BLAKE3/CMakeLists.txt
@@ -10,17 +10,17 @@ set(COMMON_FILES
         BLAKE3/c/blake3_portable.c
         )
 set(ARM64_FILES BLAKE3/c/blake3_neon.c)
+set(X86_FILES BLAKE3/c/blake3_sse2.c)
 set(SSE2_FILES BLAKE3/c/blake3_sse2_x86-64_windows_gnu.S)
-set(AVX_FILES BLAKE3/c/blake3_sse41_x86-64_windows_gnu.S)
 set(AVX2_FILES BLAKE3/c/blake3_avx2_x86-64_windows_gnu.S BLAKE3/c/blake3_sse41_x86-64_windows_gnu.S)
 set(AVX512_FILES BLAKE3/c/blake3_avx512_x86-64_windows_gnu.S)
 
-if ("${OHT_FLAVOR}" STREQUAL "ARM64")
+if ("${OHT_FLAVOR}" STREQUAL "x86")
+    set(FILES ${COMMON_FILES} ${X86_FILES})
+elseif ("${OHT_FLAVOR}" STREQUAL "ARM64")
     set(FILES ${COMMON_FILES} ${ARM64_FILES})
 elseif ("${OHT_FLAVOR}" STREQUAL "SSE2")
     set(FILES ${COMMON_FILES} ${SSE2_FILES})
-elseif ("${OHT_FLAVOR}" STREQUAL "AVX")
-    set(FILES ${COMMON_FILES} ${AVX_FILES})
 elseif ("${OHT_FLAVOR}" STREQUAL "AVX2")
     set(FILES ${COMMON_FILES} ${AVX2_FILES})
 elseif ("${OHT_FLAVOR}" STREQUAL "AVX512")
