--- a/.github/workflows/winget.yml
+++ b/.github/workflows/winget.yml
@@ -12,3 +12,4 @@ jobs:
         with:
           identifier: namazso.OpenHashTab
           token: ${{ secrets.WINGET_TOKEN }}
+          fork-user: namazso-bot
