CI: Try Windows 2025 because LLVM is broken on 2022

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     name: build-windows
-    runs-on: windows-latest
+    runs-on: windows-2025
 
     steps:
       - name: Checkout
